--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>chicken.ico">
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.13&key=ac9a4e272d1067ec026e27433acf4ab8"></script>
     <title>AJI-MIDE</title>
   </head>
   <body>
